package(default_visibility = ["//visibility:public"])

filegroup(
    name = "files",
    srcs = [
        "LICENCE",
        "profiler.sh",
        "build/jattach",
    ],
)

filegroup(
    name = "profiler",
    srcs = [
        "build/async-profiler.jar",
    ],
)

filegroup(
    name = "converter",
    srcs = [
        "build/converter.jar",
    ],
)

filegroup(
    name = "native_lib",
    srcs = [
        "build/libasyncProfiler.so",
    ],
)