load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")

package(default_visibility = ["//visibility:public"])

#bzl_library(
#    name = "rules",
#    srcs = glob(
#        include = ["**/*.bzl"],
#        exclude = ["docs.bzl"],
#    ),
#)
#
#bzl_library(
#    name = "doc-src",
#    srcs = ["docs.bzl"],
#    deps = [
#        ":rules",
#        "//tools/db",
#        "//tools/java",
#        "//tools/ui",
#    ],
#)
#
#stardoc(
#    name = "docs",
#    input = ":doc-src",
#    out = "docs.md",
#    symbol_names = ["flyway_clean", "flyway_migrate", "flyway_after_migrate", "benchmark_library"],
#)

filegroup(
    name = "watch",
    srcs = ["watch.py"],
)

filegroup(
    name = "assemble_html",
    srcs = ["assemble_html.py"],
)

filegroup(
    name = "service_worker",
    srcs = ["sw.js"],
)
