load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@io_bazel_skydoc//skylark:skylark.bzl", "skylark_doc")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "java",
    srcs = glob(
        include = ["**/*.bzl"],
        exclude = ["javadoc.bzl"],
    ),
)

java_library(
    name = "dagger",
    exported_plugins = [":dagger_plugin"],
    exports = [
        "@com_google_dagger_dagger//jar",
        "@javax_inject//jar",
    ],
)

java_plugin(
    name = "dagger_plugin",
    generates_api = True,
    javacopts = [
        "-Xdiags:verbose",
    ],
    processor_class = "dagger.internal.codegen.ComponentProcessor",
    deps = [
        "@com_google_dagger_dagger//jar",
        "@com_google_dagger_dagger_compiler//jar",
        "@com_google_dagger_dagger_producers//jar",
        "@com_google_dagger_dagger_spi//jar",
        "@com_google_errorprone_javac_shaded//jar",
        "@com_google_googlejavaformat_google_java_format//jar",
        "@com_google_guava_guava//jar",
        "@com_squareup_javapoet//jar",
        "@javax_inject//jar",
    ],
)


java_library(
    name = "jmh",
    exported_plugins = [":jmh_plugin"],
    exports = [
        "@org_openjdk_jmh_jmh_core//jar",
    ],
)

java_plugin(
    name = "jmh_plugin",
    generates_api = True,
    processor_class = "org.openjdk.jmh.generators.BenchmarkProcessor",
    deps = [
        "@org_openjdk_jmh_jmh_core//jar",
        "@org_openjdk_jmh_jmh_generator_annprocess//jar",
    ],
)
