load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "java",
    srcs = glob(
        include = ["**/*.bzl"],
        exclude = ["javadoc.bzl"],
    ),
)

java_library(
    name = "dagger",
    exported_plugins = [":dagger_plugin"],
    exports = [
        "@dagger_m2//:com_google_dagger_dagger",
        "@dagger_m2//:javax_inject_javax_inject",
    ],
)

java_plugin(
    name = "dagger_plugin",
    generates_api = True,
    javacopts = [
        "-Xdiags:verbose",
    ],
    processor_class = "dagger.internal.codegen.ComponentProcessor",
    deps = [
        "@dagger_m2//:com_google_dagger_dagger",
        "@dagger_m2//:com_google_dagger_dagger_compiler",
        "@dagger_m2//:com_google_dagger_dagger_producers",
        "@dagger_m2//:com_google_dagger_dagger_spi",
        "@dagger_m2//:com_google_errorprone_javac_shaded",
        "@dagger_m2//:com_google_googlejavaformat_google_java_format",
        "@dagger_m2//:com_google_guava_guava",
        "@dagger_m2//:com_squareup_javapoet",
        "@dagger_m2//:javax_inject_javax_inject",
    ],
)

java_library(
    name = "jmh",
    exported_plugins = [":jmh_plugin"],
    exports = [
        "@jmh_m2//:org_openjdk_jmh_jmh_core",
    ],
)

java_plugin(
    name = "jmh_plugin",
    generates_api = True,
    processor_class = "org.openjdk.jmh.generators.BenchmarkProcessor",
    deps = [
        "@jmh_m2//:org_openjdk_jmh_jmh_core",
        "@jmh_m2//:org_openjdk_jmh_jmh_generator_annprocess",
    ],
)
