package(default_visibility = ["//visibility:public"])

filegroup(
    name = "src",
    srcs = glob(["*.java"]),
)

lib_deps = [
    "@gnu_getopt_java_getopt//jar",
    "@io_undertow_undertow_core//jar",
    "@io_undertow_undertow_servlet//jar",
    "@javax_servlet//jar",
    "@org_jboss_xnio_xnio_api//jar",
]

java_library(
    name = "lib",
    srcs = [
        ":src",
    ],
    deps = lib_deps,
)

java_binary(
    name = "devsrv",
    srcs = [
        ":src",
    ],
    main_class = "io.machinecode.tools.devsrv.Main",
    runtime_deps = [
        "@org_jboss_logging_jboss_logging//jar",
        "@org_jboss_xnio_xnio_nio//jar",
    ],
    deps = lib_deps,
)
