package(default_visibility = ["//visibility:public"])

filegroup(
    name = "src",
    srcs = glob(["*.java"]),
)

lib_deps = [
    "@devsrv_m2//:gnu_getopt_java_getopt",
    "@devsrv_m2//:io_undertow_undertow_core",
    "@devsrv_m2//:io_undertow_undertow_servlet",
    "@devsrv_m2//:org_jboss_spec_javax_servlet_jboss_servlet_api_3_1_spec",
    "@devsrv_m2//:org_jboss_xnio_xnio_api",
]

java_library(
    name = "lib",
    srcs = [
        ":src",
    ],
    deps = lib_deps,
)

java_binary(
    name = "devsrv",
    srcs = [
        ":src",
    ],
    main_class = "io.machinecode.tools.devsrv.Main",
    runtime_deps = [
        "@devsrv_m2//:org_jboss_logging_jboss_logging",
        "@devsrv_m2//:org_jboss_xnio_xnio_nio",
    ],
    deps = lib_deps,
)
