package(default_visibility = ["//visibility:public"])

filegroup(
    name = "src",
    srcs = glob(["*.java"]),
)

java_library(
    name = "sql",
    srcs = [
        ":src",
    ],
    deps = [
        "@sql_m2//:gnu_getopt_java_getopt",
        "@sql_m2//:org_flywaydb_flyway_core",
        "@sql_m2//:org_jooq_jooq_codegen",
        "@sql_m2//:org_jooq_jooq_meta",
        "@sql_m2//:javax_xml_bind_jaxb_api",
    ],
)
